--- a/app/views/prototypes/alex/answers-provider.html
+++ b/app/views/prototypes/alex/answers-provider.html
@@ -36,17 +36,17 @@
         
 
 
-        <h2 class="govuk-heading-m">Vacancies</h2>
+        <h2 class="govuk-heading-m">Governors</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
            
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Leaders + managers
+              How many
             </dt>
             <dd class="govuk-summary-list__value">
-              2
+              12
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -57,7 +57,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Leaders + managers filled
+              Vacancies
             </dt>
             <dd class="govuk-summary-list__value">
               1
@@ -71,10 +71,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Teachers
+              Open vacancies
             </dt>
             <dd class="govuk-summary-list__value">
-              12
+              1
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -88,10 +88,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Teachers filled
+              Gender
             </dt>
             <dd class="govuk-summary-list__value">
-          As advertised - 10
+          Male - 10
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -107,7 +107,7 @@
              
             </dt>
             <dd class="govuk-summary-list__value">
-              Temporarily - 1
+              Female - 2
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -132,7 +132,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Difficult subjects
+              Age
             </dt>
             <dd class="govuk-summary-list__value">
               English, Business Administration
@@ -146,7 +146,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              English level
+              Disability
             </dt>
             <dd class="govuk-summary-list__value">
               Level 2
@@ -160,7 +160,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Business Administration level
+              Ethnicity
             </dt>
             <dd class="govuk-summary-list__value">
               Level 3
