--- a/app/views/prototypes/alex/staff-totals.html
+++ b/app/views/prototypes/alex/staff-totals.html
@@ -26,7 +26,7 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  How many governors do you have?
+  What is the gender of your governors?
             </h1>
 
 <table class="govuk-table">
