--- a/app/views/prototypes/alex/answers-provider.html
+++ b/app/views/prototypes/alex/answers-provider.html
@@ -91,7 +91,7 @@
               Gender
             </dt>
             <dd class="govuk-summary-list__value">
-          Male - 10
+          Male - 9
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -121,7 +121,7 @@
              
             </dt>
             <dd class="govuk-summary-list__value">
-              No - 1
+              Chose not to say - 1
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -135,7 +135,7 @@
               Age
             </dt>
             <dd class="govuk-summary-list__value">
-              English, Business Administration
+              25-34 12
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -149,7 +149,7 @@
               Disability
             </dt>
             <dd class="govuk-summary-list__value">
-              Level 2
+              2
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -163,7 +163,36 @@
               Ethnicity
             </dt>
             <dd class="govuk-summary-list__value">
-              Level 3
+              English / Welsh / Scottish / Northern Irish / British 3 
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+            
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Indian 8
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+            
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Nationality
+            </dt>
+            <dd class="govuk-summary-list__value">
+              British
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -173,30 +202,29 @@
           </div>
 
 
-        </dl>
-
-        <h2 class="govuk-heading-m">Staff</h2>
-        
-
-       
-        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-          Apprentices
+              How long
             </dt>
             <dd class="govuk-summary-list__value">
-              2
+              3 - 5 years 12
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                Change
-                <span class="govuk-visually-hidden"> address</span>
+                Change<span class="govuk-visually-hidden"> address</span>
               </a>
             </dd>
           </div>
 
-        </dl><br>
+
+
+        </dl>
+
+        
+        
+
+       
+        
 
 
 
@@ -210,8 +238,8 @@
 
           <input type="hidden" name="answers-checked" value="true">
 
-          <a href="confirmation-provider" class="govuk-button show-continue">
-         Submit your organisation’s information
+          <a href="confirmation" class="govuk-button show-continue">
+         Submit your governors information
     </a>
   &nbsp; &nbsp;
 
