--- a/app/views/prototypes/alex/confirmation-provider.html
+++ b/app/views/prototypes/alex/confirmation-provider.html
@@ -24,7 +24,7 @@
 
           
 
-<h1 class="govuk-heading-m">Impact Training Limited
+<h1 class="govuk-heading-m">Warwickshire college
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
@@ -34,7 +34,7 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-              You’ve successfully submitted your organisation’s information
+              You’ve successfully submitted your govenors information
 </h1>
 
             
