--- a/app/views/prototypes/alex/confirmation.html
+++ b/app/views/prototypes/alex/confirmation.html
@@ -21,20 +21,13 @@
 
 {% block content %}
 
-
- 
-
-
-  
-            
-
   <div class="govuk-width-container">
   <main class="govuk-main-wrapper govuk-main-wrapper--l" id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         <div class="govuk-panel govuk-panel--confirmation">
           <h1 class="govuk-panel__title">
-            Governor list submitted
+            Governor information submitted
           </h1>
           <div class="govuk-panel__body">
             Your reference number<br><strong>HDJ2123F</strong>
@@ -44,7 +37,7 @@
         <p class="govuk-body">We have sent you a confirmation email.</p>
 
         
-        <h2 class="govuk-heading-m">Return to your <a href="staff-zero1" class="govuk-link">list</a></h2>
+        <h2 class="govuk-heading-m">Return to your <a href="" class="govuk-link">?</a></h2>
 
         <!--<p class="govuk-body">
           We’ve sent your application to Hackney Electoral Register Office.
