--- a/app/views/prototypes/alex/staff-totals.html
+++ b/app/views/prototypes/alex/staff-totals.html
@@ -55,7 +55,7 @@
     </tr>
 
     <tr class="govuk-table__row">
-      <th scope="row" class="govuk-table__header">No</th>
+      <th scope="row" class="govuk-table__header">They chose not to say</th>
       <td class="govuk-table__cell govuk-table__cell--numeric"></td>
       <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
