--- a/app/views/prototypes/alex/age.html
+++ b/app/views/prototypes/alex/age.html
@@ -28,6 +28,7 @@
             <h1 class="govuk-heading-xl">
   What are their ages?
             </h1>
+            <p class="govuk-body">Tell us the total number of governors in each age range.</p><br>
 
 
 <ul class="browse-list">
@@ -67,7 +68,7 @@
               
 </ul><br><br>
 
-<table class="govuk-table">
+<!--<table class="govuk-table">
                 
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
@@ -120,7 +121,7 @@
        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
     </tr>
   </tbody>
-</table>
+</table>-->
 
           <a href="disability" class="govuk-button show-continue" style="display: inline;">
       Continue
