--- a/app/views/prototypes/alex/time.html
+++ b/app/views/prototypes/alex/time.html
@@ -28,8 +28,8 @@
             <h1 class="govuk-heading-xl">
               How long have they been governors?</h1>
             <span id="nationality-hint" class="govuk-hint">
-              Enter the numbers
-           </span>
+            Tell us the number of governors in time period.
+           </span><br>
 
 <ul class="browse-list">
 
