--- a/app/views/prototypes/alex/add.html
+++ b/app/views/prototypes/alex/add.html
@@ -35,7 +35,8 @@
             <h1 class="govuk-heading-xl">
   What is their ethnicity?
 </h1>
-
+<p class="govuk-body">Tell us the number of governors in each catagory.</p>
+<br>
 <h2 class="govuk-heading-m">White
 </h2>
 <table class="govuk-table">
