--- a/app/views/prototypes/alex/nationality.html
+++ b/app/views/prototypes/alex/nationality.html
@@ -28,7 +28,7 @@
             <h1 class="govuk-heading-xl">
               What is the nationality of your governors?</h1>
             <span id="nationality-hint" class="govuk-hint">
-              Enter the numbers
+              Tell us the number of governors in each catagory.
            </span>
 
 <ul class="browse-list">
