--- a/app/views/prototypes/alex/staff-totals.html
+++ b/app/views/prototypes/alex/staff-totals.html
@@ -29,6 +29,8 @@
   What is the gender of your governors?
             </h1>
 
+            <p class="govuk-body">Tell us the total number of males and females.</p>
+
 <table class="govuk-table">
                 
   <thead class="govuk-table__head">
@@ -55,7 +57,7 @@
     </tr>
 
     <tr class="govuk-table__row">
-      <th scope="row" class="govuk-table__header">They chose not to say</th>
+      <th scope="row" class="govuk-table__header">Not known</th>
       <td class="govuk-table__cell govuk-table__cell--numeric"></td>
       <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
