--- a/app/views/prototypes/alex/disability.html
+++ b/app/views/prototypes/alex/disability.html
@@ -28,7 +28,7 @@
             <h1 class="govuk-heading-xl">
               How many governors considered themselves to have a disability?</h1>
             <span id="nationality-hint" class="govuk-hint">
-              A person is considered to have a disability if they have a self-reported long-standing illness, condition or impairment which causes difficulty with day-to-day activities. 
+              A person is consider to have a disability if they have a self-reported long-standing illness, condition or impairment which causes difficulty with day-to-day activities. 
            </span><br>
 
 <ul class="browse-list">
