--- a/app/views/prototypes/alex/answers-provider.html
+++ b/app/views/prototypes/alex/answers-provider.html
@@ -239,7 +239,7 @@
           <input type="hidden" name="answers-checked" value="true">
 
           <a href="confirmation" class="govuk-button show-continue">
-         Submit your governors information
+         Submit your governor information
     </a>
   &nbsp; &nbsp;
 
