--- a/app/views/prototypes/alex/add.html
+++ b/app/views/prototypes/alex/add.html
@@ -73,6 +73,14 @@
     </tr>
 
     <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Roma</th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
+
+
+    <tr class="govuk-table__row">
       <th scope="row" class="govuk-table__header">Any other White background</th>
       <td class="govuk-table__cell govuk-table__cell--numeric"></td>
       <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
@@ -167,6 +175,14 @@
 
     <tr class="govuk-table__row">
       <th scope="row" class="govuk-table__header">Bangladeshi
+        </th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
+
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Chinese
         </th>
       <td class="govuk-table__cell govuk-table__cell--numeric"></td>
       <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
