--- a/app/views/prototypes/new-items/add.html
+++ b/app/views/prototypes/new-items/add.html
@@ -192,6 +192,14 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group">
+          Roma
+        </label>
+        
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group">
           Any Other White background
         </label>
         
@@ -253,6 +261,14 @@
         <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
           Bangladeshi
+        </label>
+        
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
+          Chinese
         </label>
         
       </div>
