--- a/app/views/prototypes/new-items/fte.html
+++ b/app/views/prototypes/new-items/fte.html
@@ -43,7 +43,7 @@
     
     
   <span id="sort-code-hint" class="govuk-hint">
-    For example, where their weekly hours are 35, 0.6 means they work 21 hours a week.
+    For example, if their weekly hours are 35 - then 0.6 means they work 21 hours a week.
   </span>
 
             </h1>
