--- a/app/views/prototypes/alex/age.html
+++ b/app/views/prototypes/alex/age.html
@@ -28,7 +28,7 @@
             <h1 class="govuk-heading-xl">
   What are their ages?
             </h1>
-            <p class="govuk-body">Tell us the total number of governors in each age range.</p><br>
+            <p class="govuk-body">Enter the number of governors you have in their age range.</p><br>
 
 
 <ul class="browse-list">
