--- a/app/views/prototypes/alex/staff-totals.html
+++ b/app/views/prototypes/alex/staff-totals.html
@@ -29,7 +29,7 @@
   What is the gender of your governors?
             </h1>
 
-            <p class="govuk-body">Tell us the total number of males and females.</p>
+            <p class="govuk-body">Enter the number of governors in each catagory.</p>
 
 <table class="govuk-table">
                 
