--- a/app/views/prototypes/alex/disability.html
+++ b/app/views/prototypes/alex/disability.html
@@ -26,7 +26,11 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-              How many governors consider themselves to have a disability?</h1>
+              Do your governors have a disability?</h1>
+
+              <span id="nationality-hint" class="govuk-hint">
+                Enter the number of governors in each catagory.
+             </span><br>
             <span id="nationality-hint" class="govuk-hint">
               A person is considered to have a disability if they have a self-reported long-standing illness, condition or impairment which causes difficulty with day-to-day activities. 
            </span><br>
