--- a/app/views/prototypes/new-vacancies/vacancies-open.html
+++ b/app/views/prototypes/new-vacancies/vacancies-open.html
@@ -35,7 +35,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="citizenship-conditional-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
               <h1 class="govuk-fieldset__heading">
-                Which subjects are still open?
+                Which vacancies are still open?
               </h1>
             </legend><br>
           
