--- a/app/views/prototypes/new-vacancies/answers-provider.html
+++ b/app/views/prototypes/new-vacancies/answers-provider.html
@@ -74,7 +74,7 @@
               Teachers
             </dt>
             <dd class="govuk-summary-list__value">
-              English 2
+              Construction, Planning and the Built Environment
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -88,7 +88,7 @@
             
             </dt>
             <dd class="govuk-summary-list__value">
-           Business Administration 1
+              Digital / ICT
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -96,30 +96,15 @@
               </a>
             </dd>
           </div>
+
 
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Level
+              Difficulty - Construction, Planning and the Built Environment
             </dt>
             <dd class="govuk-summary-list__value">
-          English Level 3 - 1
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-  
-
-           <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-             
-            </dt>
-            <dd class="govuk-summary-list__value">
-              English Level 4 - 1
+              No applicants
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -130,10 +115,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Level
+              Difficulty - Digital / ICT
             </dt>
             <dd class="govuk-summary-list__value">
-              Business Administration  Level 3 - 1
+              No applicants
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -144,80 +129,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Time to fill English Level 3
+              Difficulty - Performing arts
             </dt>
             <dd class="govuk-summary-list__value">
-              2 to 3 months
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Time to fill English Level 4
-            </dt>
-            <dd class="govuk-summary-list__value">
-              2 to 3 months
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Time to fill English Level 3
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Less than one month
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Filled - English Level 3
-            </dt>
-            <dd class="govuk-summary-list__value">
-              No 2
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Filled - English Level 4
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Yes - filled temporarily 1
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Filled - Business Administration Level 3
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Yes - filled temporarily 1
+              No applicants
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
