--- a/app/views/prototypes/new-vacancies/home.html
+++ b/app/views/prototypes/new-vacancies/home.html
@@ -56,7 +56,7 @@
             <div class="govuk-grid-column-one-third tile">
                 <a class="min-height" href="start-intro2">
                     <span class="govuk-heading-m heading">FE workforce</span>
-                    <span class="govuk-heading-s heading">Tell us about your staff</span>
+                    <span class="govuk-heading-s heading">Submit your staff data</span>
                 </a>
                 <div class="govuk-body govuk-!-font-size-19 warning-info">4 days left to submit</div>
 
