--- a/app/views/prototypes/new-vacancies/start-intro2.html
+++ b/app/views/prototypes/new-vacancies/start-intro2.html
@@ -7,11 +7,9 @@
   <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content">
     <strong class="govuk-tag govuk-phase-banner__content__tag">
-      beta
+      prototype
     </strong>
-    <span class="govuk-phase-banner__text">
-      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
-    </span>
+    
   </p>
 </div>
 
@@ -24,34 +22,35 @@
   
   
 
+      <div class="govuk-width-container">
+  <div class="govuk-breadcrumbs">
+    <ol class="govuk-breadcrumbs__list">
+      <li class="govuk-breadcrumbs__list-item">
+        <a class="govuk-breadcrumbs__link" href="#">Home</a>
+      </li>
+      <li class="govuk-breadcrumbs__list-item">
+        <a class="govuk-breadcrumbs__link" href="#">Section</a>
+      </li>
+      <li class="govuk-breadcrumbs__list-item" aria-current="page">Subsection</li>
+    </ol>
+  </div>
+
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">Tell us about your further education staff
-          <br><br>
-            <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span></h1>
+        <h1 class="govuk-heading-xl">FE staff collection</h1>
+        <span class="govuk-caption-l">August 2020 to July 2021</span><br>
 
-            <p class="govuk-body">This will help further education providers by:</p>
-
-        <ul class="govuk-list govuk-list--bullet">
-          <li>allowing them to benchmark against other providers </li>
-          <li>giving them information to use for planning</li>
-          <li>giving further education workforce the same status as schools and higher education</li>
-          <li>reducing the number of workforce data requests they need to respond to</li>
-          
-        </ul><br>
-        <p class="govuk-body">Collecting accurate data will help us to:</p>
+        <p class="govuk-body">Use this service to:</p>
 
         <ul class="govuk-list govuk-list--bullet">
-          <li>bid for more investment in further education </li>
-          <li>understand how our policy reforms impact staff (for example, introducing T-Levels)</li>
-          <li>understand pay and how it impacts recruitment and retention</li>
-          <li>identify skill gaps</li>
+          <li>Submit your organisation information and staff details; the two parts to this collection. </li>
+          <li>Save each section and return as many times as needed before you submit.</li>
+          <li>Upload a file from your own internal system for your staff details or add them one at a time using the digital service.</li>
           
         </ul><br>
 
-
-        <p class="govuk-body">The time it takes to submit your data will depend on how many staff you employ.</p>
+        <p class="govuk-body">The time it takes to submit will depend on how many staff you employ.</p>
 
         <a href="start-staff" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
           Start now
@@ -60,12 +59,39 @@
           </svg>
         </a>
 
-        <h2 class="govuk-heading-m">Before you start</h2>
-
-        <p class="govuk-body">You can also <a class="govuk-link" href="#">submit by post</a></p>
+        <h2 class="govuk-heading-m">What you'll need to tell us</h2>
 
 
-        
+        <p class="govuk-body">Your recruitment activity, including:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>senior and management vacancies</li>
+          <li>teaching vacancies</li>
+          <li>apprentices</li>
+          </ul>
+          <br>
+          
+          <p class="govuk-body">Your staff:</p>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>personal details</li>
+          <li>job role and level</li>
+          <li>qualifications and experience</li>
+          <li>contract and salary</li>
+          </ul>
+          
+          <p class="govuk-body">We need to know about your own staff, not subcontractors or other third party employees.</p>
+          <br><br>
+          <h2 class="govuk-heading-m">Where to find your information</h2>
+          
+          <p class="govuk-body">You will need to gather data from a variety of sources.</p>
+          <ul class="govuk-list govuk-list--bullet">
+          <li>HR systems</li>
+          <li>MI systems</li>
+          <li>job specifications</li>
+          <li>job applications</li>
+          <li>CVs</li>
+          </ul>
+          
+          <p>The data collection is open for six weeks, from the end of June. </p>
       </div>
 
       <div class="govuk-grid-column-one-third">
@@ -80,12 +106,12 @@
             <ul class="govuk-list govuk-!-font-size-16">
               <li>
                 <a class="govuk-link" href="#">
-                  Related link
+                  Why do I need to complete the FE workforce data collection?
                 </a>
               </li>
               <li>
                 <a class="govuk-link" href="#">
-                  Related link
+                  Who will benefit from the FE workforce data collection?
                 </a>
               </li>
               <li>
