--- a/app/views/prototypes/new-vacancies/many-vacancies.html
+++ b/app/views/prototypes/new-vacancies/many-vacancies.html
@@ -33,7 +33,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How many senior leader or manager vacancies did you have in the last academic year?
+        How many senior leader or manager vacancies did you have?
       </h1>
     </legend><br><br>
     <div class="govuk-form-group">
