--- a/app/views/prototypes/new-vacancies/vacancies-levels.html
+++ b/app/views/prototypes/new-vacancies/vacancies-levels.html
@@ -35,7 +35,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="citizenship-conditional-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
               <h1 class="govuk-fieldset__heading">
-                Which ones were difficult to fill?
+                Which ones were difficult to recruit teachers for?
               </h1>
             </legend>
           <div id="citizenship-conditional-hint" class="govuk-hint">
