--- a/app/views/prototypes/new-vacancies/apprentices.html
+++ b/app/views/prototypes/new-vacancies/apprentices.html
@@ -26,12 +26,12 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  How many apprentices did you employ?
+  How many apprentices worked for you in the last academic year?
 </h1>
 
             
 <p>
-  Tell us how many apprentices you employed in your own organisation - not the ones you trained for other organisations.
+  Include apprentices you employed who started before or during the year and those who left.
 
 
 </p>
