--- a/app/views/prototypes/new-vacancies/qualification-type.html
+++ b/app/views/prototypes/new-vacancies/qualification-type.html
@@ -73,7 +73,7 @@
             Vocational programmes
           </label>
           <div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
-            Apprenticeships, traineeships, T levels
+            BTECs, apprenticeships, traineeships, T levels
           </div>
         </div>
 
