--- a/app/views/prototypes/new-vacancies/what-teaching-qualification.html
+++ b/app/views/prototypes/new-vacancies/what-teaching-qualification.html
@@ -40,11 +40,10 @@
         What is their highest teaching qualification?
       </h1>
     </legend><br>
+
+    
     
     <div class="govuk-radios">
-      
-     
-      
 
        <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
@@ -119,10 +118,12 @@
         </span>
       </div>
 
+      
+
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
-          Unsure
+          Don't know
         </label>
       </div>
         
@@ -135,20 +136,7 @@
 <br>
 
 
-
-  
-
-
-
-   
-
-
-  
-
-
-
-
-          <a href="teaching-qualification" class="govuk-button show-continue" style="display: inline;">
+          <a href="what-training" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
