--- a/app/views/prototypes/new-vacancies/list-staff-john.html
+++ b/app/views/prototypes/new-vacancies/list-staff-john.html
@@ -41,9 +41,7 @@
         <a href="add-two"  class="govuk-button govuk-button--secondary">Add a member of staff </a>
 <br> <br>
 
-<h2 class="govuk-heading-m app-application-cards__heading">Incomplete staff members</h2>
-
-        
+<h2 class="govuk-heading-m app-application-cards__heading">Incomplete staff members</h2>      
       
 <table class="govuk-table">
 
@@ -54,91 +52,74 @@
 </tr>
 </thead>
 
-
-
-<tbody class="govuk-table__body">
-
-
-
-<tr class="govuk-table__row">
-
-<td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
-<a href="complete-john" class="govuk-link govuk-link--no-visited-state">
-  John Adams
-</a>
-</h3>
-
-  </td>
-  
-   <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
-    Delete<span class="govuk-table__cell--numeric"></span>
-  </a></td></tr>
-</tr>
-
-<tr class="govuk-table__row">
-
-  <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
-  <a href="complete-john" class="govuk-link govuk-link--no-visited-state">
-    Julie Anne Angelo
-  </a>
-  </h3>
-  
-    </td>
+<dl class="govuk-summary-list govuk-!-margin-bottom-1">
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      <a href="complete-john" class="govuk-link govuk-link--no-visited-state">
+        John Adams
+      </a>
+    </dt>
     
-     <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
-      Delete<span class="govuk-table__cell--numeric"></span>
-    </a></td></tr>
-  </tr>
+    <dd class="govuk-summary-list__actions">
+      <a class="govuk-link" href="edit">
+        Delete<span class="govuk-visually-hidden"></span>
+      </a>
+    </dd>
 
+  </div>
 
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      <a href="complete-julie-five" class="govuk-link govuk-link--no-visited-state">
+        Julie Ann Angelo
+      </a>
+    </dt>
+    
+    <dd class="govuk-summary-list__actions">
+      <a class="govuk-link" href="edit">
+        Delete<span class="govuk-visually-hidden"></span>
+      </a>
+    </dd>
 
-</tbody>
-</table><br>
+  </div>
+ 
+  </div>
+  
 
-<h2 class="govuk-heading-m app-application-cards__heading">Complete staff members</h2>
+</dl><br><br><br><br>
 
+<h2 class="govuk-heading-m app-application-cards__heading">Complete staff members</h2>      
+      
 <table class="govuk-table">
 
-  <thead class="govuk-table__head">
-  <tr class="govuk-table__row">
+<thead class="govuk-table__head">
+<tr class="govuk-table__row">
+
+<th class="govuk-table__cell--numeric"></th>
+</tr>
+</thead>
   
-  <th class="govuk-table__cell--numeric"></th>
-  </tr>
-  </thead>
-  
-  
-  
-  <tbody class="govuk-table__body">
-  
-  
-  
-  <tr class="govuk-table__row">
-  
-  <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
-  <a href="complete-john" class="govuk-link govuk-link--no-visited-state">
-    Julienne Williams
-  </a>
-  </h3>
-  
-    </td>
+  <dl class="govuk-summary-list govuk-!-margin-bottom-0">
+    <div class="govuk-summary-list__row">
+      <dt class="govuk-summary-list__key">
+        <a href="complete-john" class="govuk-link govuk-link--no-visited-state">
+          Julienne Williams
+        </a>
+      </dt>
+      
+      <dd class="govuk-summary-list__actions">
+        <a class="govuk-link" href="edit">
+          Delete<span class="govuk-visually-hidden"></span>
+        </a>
+      </dd>
     
-     <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
-      Delete<span class="govuk-table__cell--numeric"></span>
-    </a></td></tr>
-  </tr>
   
-  
-  
-  
-  </tbody>
-  </table><br>
+  </dl>
 
+  </table><br><br>
+   
 
- 
-
-        
-
-         <h2 class="govuk-heading-m govuk-!-font-size-27">Check and submit</h2>
+<h2 class="govuk-heading-m govuk-!-font-size-27">Check and submit</h2>
 
         <p class="govuk-body">By submitting, you are confirming that to the best of your knowledge, the details you are providing are correct.</p><br>
 
@@ -158,14 +139,17 @@
 
         </form>
 
-
+      </div>   
+   
+    </div>
+    
         
       </div>
     </div>
   </main>
 </div>
 
-</fieldset><br>
+</fieldset>
 
 
        
