--- a/app/views/prototypes/new-vacancies/teaching-qualification.html
+++ b/app/views/prototypes/new-vacancies/teaching-qualification.html
@@ -37,9 +37,13 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What is their professional teaching status?
+        Do they have professional teaching status?
       </h1>
     </legend><br>
+
+    <div class="govuk-inset-text">
+      This year you can select the 'Don't know' option but you will need to give an answer next year.
+    </div><br>
     
     <div class="govuk-checkboxes">
       <div class="govuk-checkboxes__item">
@@ -91,6 +95,12 @@
         </div>
 
       </div>
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
+        <label class="govuk-label govuk-checkboxes__label" for="waste-3">
+          Don't know
+        </label>
+      </div>
 
       
       
@@ -111,7 +121,7 @@
 <br>
 
 
-          <a href="complete-john-four" class="govuk-button show-continue" style="display: inline;">
+          <a href="industry" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
